--- a/.github/workflows/betbot.yml
+++ b/.github/workflows/betbot.yml
@@ -1,9 +1,13 @@
 name: BET ValueBot
 
 on:
-  workflow_dispatch: {}       # para lanzarlo a mano
+  workflow_dispatch: {}
   schedule:
-    - cron: "*/10 * * * *"    # cada 10 min (UTC)
+    - cron: "0 7-10 * * 1-5"        # L–V: 09–12 CEST
+    - cron: "0,30 14-18 * * 1-5"    # L–V: 16–20 CEST, cada 30 min
+    - cron: "0 7,9,11,13,15,17 * * 6,0"  # S-D: 09,11,13,15,17,19 CEST
+
+
 
 concurrency:
   group: betbot
@@ -45,4 +49,4 @@ jobs:
           name: valuebets_csv
           path: valuebets_resultados.csv
           if-no-files-found: ignore
-          retention-days: 1
+          retention-days: 1 
