--- a/.github/workflows/betbot.yml
+++ b/.github/workflows/betbot.yml
@@ -3,11 +3,10 @@ name: BET ValueBot
 on:
   workflow_dispatch: {}
   schedule:
-    - cron: "0 7-10 * * 1-5"        # L–V: 09–12 CEST
-    - cron: "0,30 14-18 * * 1-5"    # L–V: 16–20 CEST, cada 30 min
-    - cron: "0 7,9,11,13,15,17 * * 6,0"  # S-D: 09,11,13,15,17,19 CEST
-
-
+    - cron: "0 7-10 * * 1-5"        # L–V: 09–12 CEST (una vez por hora)  [UTC+2 -> 07–10 UTC]
+    - cron: "0 11-13 * * 1-5"       # L–V: 13–15 CEST (una vez por hora)  [UTC+2 -> 11–13 UTC]
+    - cron: "0,30 14-18 * * 1-5"    # L–V: 16–20 CEST, cada 30 min        [UTC+2 -> 14–18 UTC]
+    - cron: "*/15 7-18 * * 6,0"     # S–D: 09–20 CEST, cada 15 min        [UTC+2 -> 07–18 UTC]
 
 concurrency:
   group: betbot
@@ -16,7 +15,7 @@ concurrency:
 jobs:
   run:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,6 +24,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
 
       - name: Install deps
         run: |
@@ -32,7 +32,7 @@ jobs:
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
           else
-            pip install requests python-dotenv pandas
+            pip install requests python-dotenv pandas tzdata
           fi
 
       - name: Run bot
@@ -49,4 +49,4 @@ jobs:
           name: valuebets_csv
           path: valuebets_resultados.csv
           if-no-files-found: ignore
-          retention-days: 1 
+          retention-days: 1
